--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <title>VKA - VPN Keys for Anyconnect</title>
 </head>
 <body>
-  <p style="text-align:center"><img alt="" src="https://play-lh.googleusercontent.com/7It4B7fqiBFG3ToCZ8sC41DFq0GKIg3PCSf7bgQLVP_gn7rDmq9JLrA4t-Cb0dDYa4s=w240-h480-rw" style="float:center" /></p>
+<p style="text-align:center"><img alt="" src="https://raw.githubusercontent.com/arkfalak/vka/main/vkalogo.png" style="float:center" /></p>
 
 <h1 style="text-align:center"><span style="color:#3498db"><span style="font-size:48px"><strong>VKA - VPN Keys for Anyconnect</strong></span></span><br />
-<img alt="" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" /></h1>
+<a href="https://play.google.com/store/apps/details?id=com.free.openconnect.anyconnect.vpn.key"><img alt="" src="https://raw.githubusercontent.com/arkfalak/vka/main/google-play-badge.png" /></a></h1>
+
 </body>
 </html>
